apps/api/.turbo/turbo-dev.log

> @glow/api@0.1.0 dev C:\Users\tobir\Desktop\glowsite\glowfmsocialhubdemo\apps\api
> tsx watch src/index.ts

C:\Users\tobir\Desktop\glowsite\glowfmsocialhubdemo\apps\api\src\routes\identity.ts:2
import { LinkIdentitySchema } from "@shared/schemas";
         ^

SyntaxError: The requested module '@shared/schemas' does not provide an export named 'LinkIdentitySchema'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
